# hop

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: tests.yml
bench/: bench.h  main.cpp
docs/: pipeline_reorder_plan.md  rotation_plan.md  settling_plan.md
examples/: demo_bounce.cpp  demo_bounce_rp3d.cpp  demo_pile.cpp  demo_rotating_platform.cpp  demo_settling.cpp  demo_static_rotation.cpp  demo_stress.cpp  demo_stress_rp3d.cpp  headless_micro.cpp  headless_stress.cpp  profile_stress.cpp
include/hop/: bvh.h  bvh_manager.h  collide.h  collision.h  collision_listener.h  constraint.h  fixed16.h  fixed32.h  fwd.h  hop.h  manager.h  scalar_traits.h  shape.h  simulator.h  solid.h  traceable.h
include/hop/math/: aa_box.h  bounding.h  capsule.h  convex_solid.h  gjk.h  intersect.h  mat3.h  math_ops.h  matrix3x3.h  plane.h  project.h  quat.h  quaternion.h  segment.h  sphere.h  support.h  triangle.h  vec3.h
scripts/: capture_gif.sh  profile_stress.sh
tests/: CMakeLists.txt  test_bvh.cpp  test_collision.cpp  test_compound.cpp  test_fixed16.cpp  test_fixed32.cpp  test_gjk.cpp  test_intersect.cpp  test_mat3.cpp  test_matrix3x3.cpp  test_quat.cpp  test_quaternion.cpp  test_simulator.cpp  test_support.cpp  test_vec3.cpp
web/: demo_bounce.js  hop.js  hop.wasm  hop_bindings.cpp  index.html
